--- a/TheHats.html
+++ b/TheHats.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>The Hats</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="icon" href="logo_icon.png" />
     <link rel="stylesheet" href="css/style2.css" />
   </head>
@@ -17,10 +26,12 @@
         </div>
       </div>
       <div id="content">
-        <div id="closeicon">
-          <div class="outer">
-            <div class="inner">
-              <a href="portfolio.html"><label>Back</label></a>
+        <div id="iconwrapper">
+          <div id="closeicon">
+            <div class="outer">
+              <div class="inner">
+                <a href="portfolio.html"><label>Back</label></a>
+              </div>
             </div>
           </div>
         </div>
@@ -34,107 +45,148 @@
             allowfullscreen
           ></iframe>
         </div>
-        <img src="Projects/TheHats/TheHats.jpg" class="img_small" />
-        <h1>The Hats</h1>
-        <h3>Created using Arduino IDE, Circuit playground, C, and LEDs</h3>
-        <h2>Summary</h2>
-        <p>
-          The hats are the experiments of using Circuit Playground board. They
-          can detect sound, movement and touch. The Hats are designed for
-          women’s safeties when going home alone at evening, but it can also be
-          worn for fun.
-        </p>
-        <p>Group members: Yiyi Shao, Feng Yuan</p>
-        <p>My responsibilities: coding, physical making and video editing</p>
+        <div
+          class="container-fluid"
+          style="background:#E7E2DF; padding-bottom:10%;"
+        >
+          <div class="row">
+            <div id="projectnormal" class="col-md-6 ">
+              <h1>The Hats</h1>
+              <p>
+                Created using Arduino IDE, Circuit playground, C, and LEDs
+              </p>
+              <h3>Summary</h3>
+              <p>
+                The hats are the experiments of using Circuit Playground board.
+                They can detect sound, movement and touch. The Hats are designed
+                for women’s safeties when going home alone at evening, but it
+                can also be worn for fun.
+              </p>
+              <p>Group members: Yiyi Shao, Feng Yuan</p>
+              <p>
+                My responsibilities: coding, physical making and video editing
+              </p>
+            </div>
+            <div class="col-md-6 ">
+              <img
+                src="Projects/TheHats/TheHats.jpg"
+                class="img_fluid"
+                style="padding-top:10%; width:80%;height:auto;"
+              />
+            </div>
+          </div>
+        </div>
+        <div
+          class="container-fluid"
+          style="padding-top:10%;padding-bottom:10%;"
+        >
+          <div class="row">
+            <div class="col-md-6 text-center">
+              <h2>Objective</h2>
+              <p>
+                The the final project, we choose to re-do our second project,
+                the tap-to-blink knitting hat. We choose to re-do this preview
+                project for the following reasons:
+              </p>
+              <ul>
+                <li>
+                  In our previous project, we tried really hard to make the
+                  circuit as small as possible. Ideally, the circuit of the hat
+                  should be entirely hidden and all wires would not impact on
+                  the comfortability. We hope we can polish this project to
+                  complete our initial goal in our final one.
+                </li>
+                <li>
+                  In the previous project, the microcontroller we chosen was
+                  feather board. Even the feather board is small and light, it
+                  is not a ideal choice for wearable device. In our final
+                  project, we decided to move the whole circuit from feather to
+                  playground which has all built-in sensors and leds and
+                  accessible hooker for conductive thread.
+                </li>
+                <li>
+                  In our third project, we added a haptic feedback driver to our
+                  top-to-blink knitting hat. We also would like to involved this
+                  haptic feedback into our final project. In this way, we can
+                  involve the tests about haptic feedback driver into this final
+                  one.
+                </li>
+              </ul>
 
-        <h2>Objective</h2>
-        <p>
-          The the final project, we choose to re-do our second project, the
-          tap-to-blink knitting hat. We choose to re-do this preview project for
-          the following reasons:
-        </p>
-        <ul>
-          <li>
-            In our previous project, we tried really hard to make the circuit as
-            small as possible. Ideally, the circuit of the hat should be
-            entirely hidden and all wires would not impact on the
-            comfortability. We hope we can polish this project to complete our
-            initial goal in our final one.
-          </li>
-          <li>
-            In the previous project, the microcontroller we chosen was feather
-            board. Even the feather board is small and light, it is not a ideal
-            choice for wearable device. In our final project, we decided to move
-            the whole circuit from feather to playground which has all built-in
-            sensors and leds and accessible hooker for conductive thread.
-          </li>
-          <li>
-            In our third project, we added a haptic feedback driver to our
-            top-to-blink knitting hat. We also would like to involved this
-            haptic feedback into our final project. In this way, we can involve
-            the tests about haptic feedback driver into this final one.
-          </li>
-        </ul>
+              <p>Comfortability/Wearability:</p>
 
-        <p>Comfortability/Wearability:</p>
+              <p>
+                In our previous project, the pack of the circuit is kindly huge.
+                Even we sew the whole thing on the back of the hat, it is still
+                uncomfortable to wear. In the purpose of making the whole
+                circuit light, small, and at the same time stable, we plan to
+                use playground as the microcontroller. Since the playground
+                itself embedded multiple sensors and works well with the
+                conductive thread, it seems possible to create a flexible and
+                also reliable circuit with it on our hat.
+              </p>
 
-        <p>
-          In our previous project, the pack of the circuit is kindly huge. Even
-          we sew the whole thing on the back of the hat, it is still
-          uncomfortable to wear. In the purpose of making the whole circuit
-          light, small, and at the same time stable, we plan to use playground
-          as the microcontroller. Since the playground itself embedded multiple
-          sensors and works well with the conductive thread, it seems possible
-          to create a flexible and also reliable circuit with it on our hat.
-        </p>
-
-        <p>Usability/Accessibility:</p>
-        <p>
-          In our second project, we used the self-made sensor to trigger the
-          leds. In the final one, we hope we can improve the prototype. We will
-          use a vibration motor to create a haptic feedback. Since there are
-          built-in sensors in circuit playground, we will also use these sensors
-          to make the change of leds more diverse.
-        </p>
-        <p>Design Influence:</p>
-        <ul>
-          <li>
-            Based on the shape/structure of the hat, we run the conductive
-            threads separately to make sure them won’t touched.
-          </li>
-          <li>
-            We placed the led string in vertical so the hat won’t be stiff and
-            hard to wear.
-          </li>
-          <li>
-            We placed the circuit playground in the forehead to show the
-            neopixel.
-          </li>
-        </ul>
-        <h2>Action</h2>
-        <img src="Projects/TheHats/TheHats_1.JPG" class="img_medium" />
-        <img src="Projects/TheHats/TheHats_2.JPG" class="img_medium" />
-        <p>Self-Evaluation:</p>
-        <p>
-          The most difficult part is to transform all of the digital components
-          from breadboard to the hat. We tried our best to make the circuit as
-          less as possible. From the beginning, we decided to use the circuit
-          playground with all sensors embedded instead of Feather M0. Although
-          we have planned all of the positions for the rest of each part, we
-          still messed up the circuit a lot of times while assembling the hat
-          using conductive thread. The whole process is more like redo, redo and
-          redo all over again to try to find problems and solutions to solve it.
-          But I am really very happy with the final results and enjoyed
-          exploring most of the functions of circuit playground board. Moreover,
-          the main goals of our final project have been achieved. Firstly, the
-          goal of reducing the weight to improve the wearability. Secondly, the
-          goal of trying to combine all interesting contents from previous
-          workshops. For the future development of this project, I think there
-          is a lot of potentials. I personally would like to wear it as my daily
-          outfit, specifically for meeting or presentation as our initial
-          design. I would like to see how people react to my body language and
-          comment about it to help to improve the next iteration.
-        </p>
+              <p>Usability/Accessibility:</p>
+              <p>
+                In our second project, we used the self-made sensor to trigger
+                the leds. In the final one, we hope we can improve the
+                prototype. We will use a vibration motor to create a haptic
+                feedback. Since there are built-in sensors in circuit
+                playground, we will also use these sensors to make the change of
+                leds more diverse.
+              </p>
+              <p>Design Influence:</p>
+              <ul>
+                <li>
+                  Based on the shape/structure of the hat, we run the conductive
+                  threads separately to make sure them won’t touched.
+                </li>
+                <li>
+                  We placed the led string in vertical so the hat won’t be stiff
+                  and hard to wear.
+                </li>
+                <li>
+                  We placed the circuit playground in the forehead to show the
+                  neopixel.
+                </li>
+              </ul>
+              <h2>Action</h2>
+              <img
+                src="Projects/TheHats/TheHats_1.JPG"
+                class="img_fluid"
+                style="width:100%;height:auto;"
+              />
+              <img
+                src="Projects/TheHats/TheHats_2.JPG"
+                class="img_fluid"
+                style="width:100%;height:auto;"
+              />
+              <p>Self-Evaluation:</p>
+              <p>
+                The most difficult part is to transform all of the digital
+                components from breadboard to the hat. We tried our best to make
+                the circuit as less as possible. From the beginning, we decided
+                to use the circuit playground with all sensors embedded instead
+                of Feather M0. Although we have planned all of the positions for
+                the rest of each part, we still messed up the circuit a lot of
+                times while assembling the hat using conductive thread. The
+                whole process is more like redo, redo and redo all over again to
+                try to find problems and solutions to solve it. But I am really
+                very happy with the final results and enjoyed exploring most of
+                the functions of circuit playground board. Moreover, the main
+                goals of our final project have been achieved. Firstly, the goal
+                of reducing the weight to improve the wearability. Secondly, the
+                goal of trying to combine all interesting contents from previous
+                workshops. For the future development of this project, I think
+                there is a lot of potentials. I personally would like to wear it
+                as my daily outfit, specifically for meeting or presentation as
+                our initial design. I would like to see how people react to my
+                body language and comment about it to help to improve the next
+                iteration.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
