--- a/CourseIcon.html
+++ b/CourseIcon.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
     <title>CourseIcon</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/style2.css" />
     <link rel="icon" href="logo_icon.png" />
   </head>
@@ -17,55 +26,95 @@
         </div>
       </div>
       <div id="content">
-        <div id="closeicon">
-          <div class="outer">
-            <div class="inner">
-              <a href="portfolio.html"><label>Back</label></a>
+        <div id="iconwrapper">
+          <div id="closeicon">
+            <div class="outer">
+              <div class="inner">
+                <a href="portfolio.html"><label>Back</label></a>
+              </div>
             </div>
           </div>
         </div>
-        <img src="Projects/CourseIcon/CourseIcon.jpg" class="img_small" />
-        <h1>Icon Design</h1>
-        <h3>Created using Adobe Illustrator</h3>
-        <h2>Summary</h2>
-        <p>
-          Icon design for Plymouth University online course in iTunes U:
-          <a
-            href="https://itunes.apple.com/ca/course/ios-development-in-swift/id950659946"
-            >iOS Development in Swift</a
-          >
-          and
-          <a
-            href="https://itunes.apple.com/ca/course/digital-electronics-vhdl/id848429948"
-            >Digital Electronics & VHDL</a
-          >
-        </p>
+        <div class="container-fluid">
+          <div class="row">
+            <div id="projectnormal" class="col-md-6 ">
+              <h1>Online Course Icon Design</h1>
+              <p>Created using Adobe Illustrator, InDesign and PhotoShop</p>
+              <h3 style="padding-top:10%;">Summary</h3>
+              <p>
+                Icon and visual design for Plymouth University online course in
+                iTunes U:
+                <a
+                  href="https://itunes.apple.com/ca/course/ios-development-in-swift/id950659946"
+                  class="alert-link"
+                  >iOS Development in Swift</a
+                >
+                and
+                <a
+                  href="https://itunes.apple.com/ca/course/digital-electronics-vhdl/id848429948"
+                  class="alert-link"
+                  >Digital Electronics & VHDL</a
+                >
+              </p>
 
-        <h2>Goal</h2>
-        <p>
-          Design a new icon/cover for the online course (Swift development and
-          VHDL development) around the course content within the university's
-          branding to attract more users.
-        </p>
-
-        <h2>Outcome</h2>
-        <p>
-          Online courses with the new design were featured on the font page with
-          siginificant traffics and downloads.
-        </p>
-        <img src="Projects/CourseIcon/CourseIcon_4.png" class="img_medium" />
-        <img src="Projects/CourseIcon/CourseIcon_5.png" class="img_medium" />
-        <img src="Projects/CourseIcon/CourseIcon_2.jpg" class="img_medium" />
-        <p class="caption">Flyer design</p>
-        <img
-          src="Projects/CourseIcon/CourseIcon_flyer.jpg"
-          class="img_medium"
-        />
-        <p class="caption">Banner design</p>
-        <img
-          src="Projects/CourseIcon/CourseIcon_banner.jpg"
-          class="img_medium"
-        />
+              <h3>Goal</h3>
+              <p>
+                Design a new icon/cover for the online course (Swift development
+                and VHDL development) around the course content within the
+                university's branding to attract more users.
+              </p>
+            </div>
+            <div class="col-md-6 " style="padding:0;">
+              <img
+                src="Projects/CourseIcon/CourseIcon_1.jpg"
+                class="img-fluid"
+                style="width:100%;"
+              />
+            </div>
+            <div
+              id="projectnormal"
+              class="col-md-6 "
+              style="background: #f2f2f2;"
+            >
+              <h3>Outcome</h3>
+              <p>
+                Visual design for the icons and other promotional materials such
+                as banner and flyers.
+              </p>
+              <h3>Results</h3>
+              <p>
+                Online courses with the new design were featured on the font
+                page with siginificant traffics and downloads.
+              </p>
+            </div>
+            <div class="col-md-6 " style="padding:0;">
+              <img
+                src="Projects/CourseIcon/CourseIcon_3.jpg"
+                class="img-fluid"
+                style="width:100%;"
+              />
+            </div>
+            <div class="col-md-6 " style="padding:0;">
+              <img
+                src="Projects/CourseIcon/CourseIcon_flyer.jpg"
+                class="img-fluid"
+              />
+              <img
+                src="Projects/CourseIcon/CourseIcon_flyer_2.jpg"
+                class="img-fluid"
+              />
+            </div>
+            <div
+              class="col-md-6 "
+              style="padding:0; width:100%; background:#ddd6fd;"
+            >
+              <img
+                src="Projects/CourseIcon/CourseIcon_banner.jpg"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
