--- a/FloralWatercolour.html
+++ b/FloralWatercolour.html
@@ -2,7 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>CourseIcon</title>
+    <title>Floral Watercolour</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/style2.css" />
     <link rel="icon" href="logo_icon.png" />
   </head>
@@ -17,49 +26,74 @@
         </div>
       </div>
       <div id="content">
-        <div id="closeicon">
-          <div class="outer">
-            <div class="inner">
-              <a href="portfolio.html"><label>Back</label></a>
+        <div id="iconwrapper">
+          <div id="closeicon">
+            <div class="outer">
+              <div class="inner">
+                <a href="portfolio.html"><label>Back</label></a>
+              </div>
             </div>
           </div>
         </div>
-        <img
-          src="Projects/FloralWatercolour/FloralWatercolour_1.jpg"
-          class="img_small"
-        />
-        <h1>Floral Watercolour</h1>
-        <h3>Created using brush and watercolor</h3>
-        <h2>Summary</h2>
-        <p>
-          Illustration made for wedding invitation cards in collaboration with
-          <a href="https://www.instagram.com/tinyrabbithole/?hl=en"
-            >Tiny Rabbit Hole</a
-          >
-          at Singapore.
-        </p>
+        <div class="container-fluid" style="background:#D9D7D2;">
+          <div class="row">
+            <div id="projectnormal" class="col-md-6 ">
+              <h1>Floral Watercolour</h1>
+              <p>Created using brush and watercolor</p>
+              <h3 style="padding-top:10%;">Summary</h3>
+              <p>
+                Illustration made for wedding invitation cards in collaboration
+                with
+                <a
+                  href="https://www.instagram.com/tinyrabbithole/?hl=en"
+                  class="alert-link"
+                  >Tiny Rabbit Hole</a
+                >
+                at Singapore.
+              </p>
 
-        <h2>Goal</h2>
-        <p>
-          Watercolour illustration design for wedding invitation cards.
-        </p>
-
-        <img
-          src="Projects/FloralWatercolour/FloralWatercolour_2.jpg"
-          class="img_medium"
-        />
-        <img
-          src="Projects/FloralWatercolour/FloralWatercolour_1.jpeg"
-          class="img_medium"
-        />
-        <img
-          src="Projects/FloralWatercolour/FloralWatercolour_2.jpeg"
-          class="img_medium"
-        />
-        <img
-          src="Projects/FloralWatercolour/FloralWatercolour_3.jpeg"
-          class="img_medium"
-        />
+              <h3>Goal</h3>
+              <p>
+                Watercolour illustration design for wedding invitation cards.
+              </p>
+            </div>
+            <div class="col-md-6 ">
+              <img
+                src="Projects/FloralWatercolour/FloralWatercolour_1.jpg"
+                class="img-fluid"
+              />
+            </div>
+            <div class="container-fluid">
+              <div class="row equal">
+                <div class="col-md-4 " style="padding:0;">
+                  <img
+                    src="Projects/FloralWatercolour/FloralWatercolour_2.jpg"
+                    class="img-fluid"
+                    style="height:100%;width:100%;"
+                  />
+                </div>
+                <div class="col-md-4 " style="padding:0;">
+                  <img
+                    src="Projects/FloralWatercolour/FloralWatercolour_1.jpeg"
+                    class="img-fluid"
+                    style="height:50%;width:100%;"
+                  />
+                  <img
+                    src="Projects/FloralWatercolour/FloralWatercolour_2.jpeg"
+                    class="img-fluid"
+                    style="height:50%;width:100%;"
+                  />
+                </div>
+                <div class="col-md-4 " style="padding:0;">
+                  <img
+                    src="Projects/FloralWatercolour/FloralWatercolour_3.jpeg"
+                    class="img-fluid"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
