--- a/Flyer.html
+++ b/Flyer.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>Flyer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/style2.css" />
+    <link rel="icon" href="logo_icon.png" />
     <link rel="stylesheet" href="css/style2.css" />
     <link rel="icon" href="logo_icon.png" />
   </head>
@@ -17,22 +28,33 @@
         </div>
       </div>
       <div id="content">
-        <div id="closeicon">
-          <div class="outer">
-            <div class="inner">
-              <a href="portfolio.html"><label>Back</label></a>
+        <div id="iconwrapper">
+          <div id="closeicon">
+            <div class="outer">
+              <div class="inner">
+                <a href="portfolio.html"><label>Back</label></a>
+              </div>
             </div>
           </div>
         </div>
-        <img src="Projects/Flyer/Flyer_1.png" class="img_small" />
-        <h1>Flyer Design</h1>
-        <h3>Created using Adobe Illustrator, Adobe Photoshop</h3>
-        <h2>Summary</h2>
-        <p>
-          Flyer design for Walk-on Exhibition at Plymouth University
-        </p>
-
-        <img src="Projects/Flyer/Flyer_2.jpg" class="img_medium" />
+        <div class="container-fluid" style="background:#959494;">
+          <div class="row">
+            <div id="projectnormal" class="col-md-6 ">
+              <h1>Flyer Design</h1>
+              <p>Created using Adobe Illustrator, Adobe Photoshop</p>
+              <h3 style="padding-top:10%;">Summary</h3>
+              <p>
+                Flyer design for Walk-on Exhibition at Plymouth University
+              </p>
+            </div>
+            <div class="col-md-6 ">
+              <img src="Projects/Flyer/Flyer_1.png" class="img-fluid" />
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid" style="padding:0;">
+          <img src="Projects/Flyer/Flyer_2.jpg" class="img-fluid" />
+        </div>
       </div>
     </div>
   </body>
