--- a/RABBOT.html
+++ b/RABBOT.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
     <title>RABBOT</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/style2.css" />
     <link rel="icon" href="logo_icon.png" />
   </head>
@@ -16,111 +25,239 @@
           </div>
         </div>
       </div>
+
       <div id="content">
-        <div id="closeicon">
-          <div class="outer">
-            <div class="inner">
-              <a href="portfolio.html"><label>Back</label></a>
+        <div id="iconwrapper">
+          <div id="closeicon">
+            <div class="outer">
+              <div class="inner">
+                <a href="portfolio.html"><label>Back</label></a>
+              </div>
             </div>
           </div>
         </div>
-        <img src="Projects/RABBOT/RABBOT_1.jpg" class="img_small" />
-        <h1>RABBOT</h1>
-        <h3>
-          Created for iPads, Andriod phones and Gear VR using Unity3D, Node.js,
-          Socket.IO, Particle API, OculusVR, Vuforia, Blender, Adobe
-          Illustrator, Particle Photon, 3D printing and Laser cutting
-        </h3>
-        <h2>Summary</h2>
-        <img src="Projects/RABBOT/arappdesign.png" class="img_medium" />
-        <img src="Projects/RABBOT/RABBOT.gif" class="img_large" />
-        <img src="Projects/RABBOT/RABBOT2.gif" class="img_medium" />
-        <p>
-          RABBOT is my thesis project exploring the possibilities of generating
-          shared awareness in a virtual reality (VR) experience between a
-          head-mounted display (HMD) wearer and other observers in the same
-          physical space. The final outcome of RABBOT features a modified VR
-          head-mounted display and three-player asymmetric mobile game
-          experiences with an embedded communication system to create
-          opportunities for shared awareness amongst players. In the game, the
-          participating observers can play cooperatively as Scientists to
-          against the HMD wearer who is playing the Rabbot. Overall this thesis
-          project argues that an engaging VR experience should not focus
-          exclusively on the HMD wearer but also include other audiences to
-          address and engage the relationships and interactions between them.
-        </p>
-        <p>
-          Full thesis paper can be found
-          <a href="http://openresearch.ocadu.ca/id/eprint/2512/">here</a>
-        </p>
 
-        <h2>Objective</h2>
-        <p>
-          The isolating design of virtual reality (VR) head-mounted displays
-          (HMD) is typical in the single-player experience - immersing one into
-          a virtual environment. This often creates a situation in which only
-          one headset is available but no opportunities for engagement are made
-          accessible for other people nearby. This isolation in VR cuts off
-          social connections and awareness between the virtual world and
-          physical world, between the HMD wearers and other observers.
-          Additionally, the current offerings in the consumer electronics market
-          of the head-mounted display have a dull appearance, which also shows
-          the lack of attention in terms of design for other audiences.
-        </p>
+        <div class="container-fluid">
+          <div class="row">
+            <div id="projectnormal" class="col-md-4">
+              <h1>RABBOT</h1>
+              <p>A three-player AR/VR game</p>
+              <p>
+                Created for iPads, Andriod phones and Gear VR using Unity3D,
+                Node.js, Socket.IO, Particle API, OculusVR, Vuforia, Blender,
+                Adobe Illustrator, Particle Photon, 3D printing and Laser
+                cutting
+              </p>
+            </div>
+            <div class="col-md-8">
+              <img src="Projects/RABBOT/RabbotShowcase.png" class="img-fluid" />
+            </div>
+          </div>
+        </div>
+        <div
+          class="container-fluid"
+          style="background:black; padding-top:10%; text-align: center;"
+        >
+          <div class="row">
+            <div class="col">
+              <div id="HeadsetTop">
+                <img src="Projects/RABBOT/HeadsetFrame.png" class="img-fluid" />
+              </div>
 
-        <h2>Action</h2>
-        <h4>1.Ideation</h4>
-        <img src="Projects/RABBOT/Sketch.jpg" class="img_medium" />
-        <img src="Projects/RABBOT/PostNotes.jpg" class="img_medium" />
-        <h4>2.Roadmap</h4>
-        <p>
-          Project management for both written document and prototype making.
-        </p>
-        <img src="Projects/RABBOT/roadmap.jpg" class="img_medium" />
-        <h4>3.Concenptual Framework</h4>
-        <p>
-          A diagram to define possible users, solutions and relationships among
-          them.
-        </p>
-        <img src="Projects/RABBOT/Methdology.jpg" class="img_medium" />
-        <h4>4.Prototype Map</h4>
-        <p>
-          I made four iterative prototypes and extracted useful approaches after
-          evalutions.
-        </p>
-        <img src="Projects/RABBOT/PrototypeMap.jpg" class="img_medium" />
-        <h4>5.System Overview</h4>
-        <img src="Projects/RABBOT/SystemDiagram.jpg" class="img_medium" />
-        <h4>6.Workflow</h4>
-        <img src="Projects/RABBOT/Workflow.jpg" class="img_large" />
-        <h4>7.Colors & Typography</h4>
-        <img src="Projects/RABBOT/Background.JPG" class="img_large" />
-        <img src="Projects/RABBOT/ColorsTypography.jpg" class="img_medium" />
-        <h4>8.Branding & UI</h4>
-        <img src="Projects/RABBOT/RabbotBranding.jpg" class="img_large" />
-        <img src="Projects/RABBOT/RabbotUI.jpg" class="img_large" />
-        <img src="Projects/RABBOT/Rabbot3D.png" class="img_medium" />
-        <img src="Projects/RABBOT/object.png" class="img_medium" />
-        <h4>9.User Testing</h4>
-        <img src="Projects/RABBOT/UserTesting.gif" class="img_medium" />
-        <img src="Projects/RABBOT/UsertestingResults.png" class="img_medium" />
+              <div id="HeadsetUnder">
+                <img src="Projects/RABBOT/GameBG.gif" class="img-fluid" />
+              </div>
+            </div>
+          </div>
+        </div>
 
-        <h2>Exhibits</h2>
-        <img src="Projects/RABBOT/TMAC.png" class="img_medium" />
-        <p class="caption"><i>What the Futures?</i></p>
-        <p class="caption">Toronto Media Arts Centre, April 2019</p>
-        <img src="Projects/RABBOT/LevelUp.png" class="img_medium" />
-        <p class="caption"><i>LevelUp</i></p>
-        <p class="caption">Design Exchange, April 2019</p>
-        <img src="Projects/RABBOT/FITC.png" class="img_medium" />
-        <p class="caption"><i>FITC</i></p>
-        <p class="caption">Hilton Toronto, April 2019</p>
-        <img src="Projects/RABBOT/GradEX.png" class="img_medium" />
-        <p class="caption"><i>GradEX</i></p>
-        <p class="caption">OCAD University, May 2019</p>
-        <img src="Projects/RABBOT/FutureEducation.png" class="img_medium" />
-        <p class="caption"><i>Future Education Festival</i></p>
-        <p class="caption">Evergreen Brick Works, May 2019</p>
+        <div class="container-fluid" id="IntroMain">
+          <div class="row">
+            <div class="col-md-6 text-center" id="Rabbot">
+              <h2>Summary</h2>
+              <p>
+                RABBOT is my MDes thesis project exploring the possibilities of
+                generating shared awareness in a virtual reality (VR) experience
+                between a head-mounted display (HMD) wearer and other observers
+                in the same physical space. The final outcome of RABBOT features
+                a modified VR head-mounted display and three-player asymmetric
+                mobile game experiences with an embedded communication system to
+                create opportunities for shared awareness amongst players. In
+                the game, the participating observers can play cooperatively as
+                Scientists to against the HMD wearer who is playing the Rabbot.
+                Overall this thesis project argues that an engaging VR
+                experience should not focus exclusively on the HMD wearer but
+                also include other audiences to address and engage the
+                relationships and interactions between them.
+              </p>
+
+              <p>
+                Full thesis paper can be found
+                <a
+                  href="http://openresearch.ocadu.ca/id/eprint/2512/"
+                  class="alert-link"
+                  >here</a
+                >
+              </p>
+
+              <img
+                src="Projects/RABBOT/RabbotIpadDisplay.gif"
+                class="img-fluid"
+                style="padding-top:10%; padding-bottom:10%;"
+              />
+              <h2>Problem</h2>
+              <p>
+                The isolating design of virtual reality (VR) head-mounted
+                displays (HMD) is typical in the single-player experience -
+                immersing one into a virtual environment. This often creates a
+                situation in which only one headset is available but no
+                opportunities for engagement are made accessible for other
+                people nearby. This isolation in VR cuts off social connections
+                and awareness between the virtual world and physical world,
+                between the HMD wearers and other observers. Additionally, the
+                current offerings in the consumer electronics market of the
+                head-mounted display have a dull appearance, which also shows
+                the lack of attention in terms of design for other audiences.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div id="process">
+          <h4>1.Ideation</h4>
+          <img src="Projects/RABBOT/Sketch.jpg" class="img_medium" />
+          <img src="Projects/RABBOT/PostNotes.jpg" class="img_medium" />
+          <h4>2.Roadmap</h4>
+          <p>
+            Project management for both written document and prototype making.
+          </p>
+          <img src="Projects/RABBOT/roadmap.jpg" class="img_medium" />
+          <h4>3.Concenptual Framework</h4>
+          <p>
+            A diagram to define possible users, solutions and relationships
+            among them.
+          </p>
+          <img src="Projects/RABBOT/Methdology.jpg" class="img_medium" />
+          <h4>4.Prototype Map</h4>
+          <p>
+            I made four iterative prototypes and extracted useful approaches
+            after evalutions.
+          </p>
+          <img src="Projects/RABBOT/PrototypeMap.jpg" class="img_medium" />
+          <h4>5.System Overview</h4>
+          <img src="Projects/RABBOT/SystemDiagram.jpg" class="img_medium" />
+          <h4>6.Workflow</h4>
+          <img src="Projects/RABBOT/Workflow.jpg" class="img_large" />
+          <h4>7.Colors & Typography</h4>
+          <img src="Projects/RABBOT/Background.JPG" class="img_large" />
+          <img src="Projects/RABBOT/ColorsTypography.jpg" class="img_medium" />
+          <h4>8.Branding & UI</h4>
+          <img
+            src="Projects/RABBOT/RabbotBranding.jpg"
+            class="img_large"
+            style="padding-bottom:0;"
+          />
+          <img
+            src="Projects/RABBOT/RabbotUI.jpg"
+            class="img_large"
+            style="padding-top:0;"
+          />
+          <img src="Projects/RABBOT/Rabbot3D.png" class="img_medium" />
+          <img src="Projects/RABBOT/object.png" class="img_medium" />
+          <h4>9. Physical Making</h4>
+          <div class="row" style="padding-top:5%; padding-bottom:5%;">
+            <div class="col-md-6" style="background:#393939;">
+              <img src="Projects/RABBOT/Modeling.jpg" class="img_medium" />
+            </div>
+            <div class="col-md-6" style="background:#d7d2c2;">
+              <img src="Projects/RABBOT/Making.jpg" class="img_medium" />
+            </div>
+          </div>
+          <h4>10.User Testing</h4>
+          <img src="Projects/RABBOT/UserTesting.gif" class="img_medium" />
+          <img
+            src="Projects/RABBOT/UsertestingResults.png"
+            class="img_medium"
+          />
+          <div class="container" id="feedback">
+            <div class="row">
+              <div class="col-sm-6">
+                <h3>
+                  VR Player
+                </h3>
+                <h5>
+                  What part in the virtual reality experience did you find the
+                  most interesting?
+                </h5>
+                <ul>
+                  <li>Rabbit ears on the top of VR</li>
+                  <li>
+                    Being able to communicate with other players while being
+                    visually isolated in a separate scene
+                  </li>
+                  <li>Shooting with my mind + mechanical ears</li>
+                  <li>
+                    I liked that there was connection & interaction between the
+                    players even if not everyone was in VR
+                  </li>
+                  <li>Looking around the scene for the ball</li>
+                  <li>Looking for the ball / The environment was cool</li>
+                  <li>Interact with virtual objects</li>
+                  <li>Environmental experience</li>
+                  <li>The graphics! So pretty</li>
+                  <li>
+                    The incentives - winning (finding the ball). Rabbot most
+                    fun.
+                  </li>
+                </ul>
+              </div>
+              <div class="col-sm-6">
+                <h3>Non-VR Player</h3>
+                <h5>
+                  How did you find the Rabbot app to use and why?
+                </h5>
+                <h6>I like...</h6>
+                <ul>
+                  <li>
+                    the AR feature that allows the interaction with VR player
+                  </li>
+                  <li>simple, but can be more complex + difficlut</li>
+                  <li>scanning part</li>
+                  <li>how my actions directly affected other players</li>
+                  <li>that it was very user freiendly and initiative</li>
+                </ul>
+
+                <h6>I don't like...</h6>
+                <ul>
+                  <li>that there isn't much to do</li>
+                  <li>
+                    the map. It was difficult to see where I should or could
+                    move
+                  </li>
+                  <li>mainly just technical problems. Other wise fun.</li>
+                  <li>Keep losing pionts</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <h2>Exhibits</h2>
+          <img src="Projects/RABBOT/TMAC.png" class="img_medium" />
+          <p class="caption"><i>What the Futures?</i></p>
+          <p class="caption">Toronto Media Arts Centre, April 2019</p>
+          <img src="Projects/RABBOT/LevelUp.png" class="img_medium" />
+          <p class="caption"><i>LevelUp</i></p>
+          <p class="caption">Design Exchange, April 2019</p>
+          <img src="Projects/RABBOT/FITC.png" class="img_medium" />
+          <p class="caption"><i>FITC</i></p>
+          <p class="caption">Hilton Toronto, April 2019</p>
+          <img src="Projects/RABBOT/GradEX.png" class="img_medium" />
+          <p class="caption"><i>GradEX</i></p>
+          <p class="caption">OCAD University, May 2019</p>
+          <img src="Projects/RABBOT/FutureEducation.png" class="img_medium" />
+          <p class="caption"><i>Future Education Festival</i></p>
+          <p class="caption">Evergreen Brick Works, May 2019</p>
+        </div>
       </div>
     </div>
   </body>
