--- a/UniverseConcert.html
+++ b/UniverseConcert.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>Universe Concert</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/style2.css" />
     <link rel="icon" href="logo_icon.png" />
   </head>
@@ -17,10 +26,12 @@
         </div>
       </div>
       <div id="content">
-        <div id="closeicon">
-          <div class="outer">
-            <div class="inner">
-              <a href="portfolio.html"><label>Back</label></a>
+        <div id="iconwrapper">
+          <div id="closeicon">
+            <div class="outer">
+              <div class="inner">
+                <a href="portfolio.html"><label>Back</label></a>
+              </div>
             </div>
           </div>
         </div>
@@ -34,38 +45,51 @@
             allowfullscreen
           ></iframe>
         </div>
-        <img
-          src="Projects/UniverseConcert/UniverseConcert_1.png"
-          class="img_small"
-        />
-        <h1>Universe Concert</h1>
-        <h3>Created using Unity3D, Socket.IO and Adobe Photoshop</h3>
-        <h2>Summary</h2>
-        <p>
-          Hello dreamers! Have you ever wondered what the galaxy smells like and
-          tastes like? Even sounds like? Have you ever dreamed of being a star
-          in the galaxy? The answers are all in the small cup And even more
-          exciting, may we invite you to get your smartphone and enter
-          wray.pro/Galaxy from your browser. you can control your own star by
-          holding it and turning around. Today we are going to make your dream
-          come true, enjoy –Intro
-        </p>
-        <p>
-          This is a multi-sensory performance which took place at the Immersive
-          Vision Theatre (Dome). People are invited to use their mobile phone to
-          interact with the dome theatre by turning into a star in the universe.
-          After entering the URL, the audiences can control their own star and
-          make a unique beautiful sound, which will eventually become a concert.
-          At the same time, raspberry rum jelly shots were served to make the
-          multisensory experience because scientific research shows that the
-          center of Milky Way smells like raspberry and taste like rum.
-        </p>
-        <p>Group members: Sam Wray (2XAA) and Yiyi shao</p>
-        <p>My responsibility: User experience design and Artwork design</p>
-        <img
-          src="Projects/UniverseConcert/UniverseConcert.gif"
-          class="img_small"
-        />
+        <div class="container-fluid" style=" padding-bottom:10%;">
+          <div class="row">
+            <div id="projectnormal" class="col-md-6 ">
+              <h1>Universe Concert</h1>
+              <p>Created using Unity3D, Socket.IO and Adobe Photoshop</p>
+              <h3>Summary</h3>
+              <p>
+                Hello dreamers! Have you ever wondered what the galaxy smells
+                like and tastes like? Even sounds like? Have you ever dreamed of
+                being a star in the galaxy? The answers are all in the small cup
+                And even more exciting, may we invite you to get your smartphone
+                and enter wray.pro/Galaxy from your browser. you can control
+                your own star by holding it and turning around. Today we are
+                going to make your dream come true, enjoy –Intro
+              </p>
+              <p>
+                This is a multi-sensory performance which took place at the
+                Immersive Vision Theatre (Dome). People are invited to use their
+                mobile phone to interact with the dome theatre by turning into a
+                star in the universe. After entering the URL, the audiences can
+                control their own star and make a unique beautiful sound, which
+                will eventually become a concert. At the same time, raspberry
+                rum jelly shots were served to make the multisensory experience
+                because scientific research shows that the center of Milky Way
+                smells like raspberry and taste like rum.
+              </p>
+              <p>Group members: Sam Wray (2XAA) and Yiyi shao</p>
+              <p>
+                My responsibility: User experience design and Artwork design
+              </p>
+            </div>
+            <div class="col-md-6 ">
+              <img
+                src="Projects/UniverseConcert/UniverseConcert_1.png"
+                class="img_fluid"
+                style="padding-top:10%; width:80%;height:auto;"
+              />
+              <img
+                src="Projects/UniverseConcert/UniverseConcert.gif"
+                class="img_fluid"
+                style=" width:80%;height:auto;"
+              />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
